Fixed scrollbar issue

--- a/website/src/components/CommandsTable/style.css
+++ b/website/src/components/CommandsTable/style.css
@@ -15,5 +15,5 @@
   text-overflow:ellipsis; 
   overflow: hidden;
   max-width: 400px;
-  width: 100%;
+  width: 80%;
 }
